test/kubernetes/e2e/features/validation/testdata/invalid-resources/gateway-no-upstream.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: otel-gateway
spec:
  bindAddress: '::'
  bindPort: 9090
  httpGateway:
    options:
      httpConnectionManagerSettings:
        tracing:
          openTelemetryConfig:
            collectorUpstreamRef:
              name: opentelemetry-collector
              namespace: default
